# bookstore

./: .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  requirements.txt
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py  wsgi.py
order/: views.py
order/migrations/: 0001_initial.py
order/serializers/: order_serializer.py
order/tests/test_serializers/: test_serializers.py
order/tests/test_viewsets/: test_order_viewsets.py
order/viewsets/: order_viewset.py
product/: urls.py  views.py
product/migrations/: 0001_initial.py
product/models/: category.py
product/serializers/: product_serializer.py
product/tests/: test_serializers.py
product/viewsets/: product_viewset.py
