[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Bruno-Alvez <bruno.bsantos75@gmail.com>"]
readme = "README.md"
packages = [{ include = "bookstore" }]
license = "MIT"
homepage = "https://github.com/seu-repo/bookstore"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
djangorestframework = "^3.15.0"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.3.0"
psycopg2 = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-django = "^4.11.1"
factory-boy = "^3.3"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
